syntax = "proto3";

package proto;

option go_package = "github.com/abhisek/supply-chain-gateway/services/gen";

import "validate/validate.proto";

message Artefact {
  string ecosystem  = 1;
  string group      = 2;
  string name       = 3;
  string version    = 4;
}

enum VulnerabilitySeverity {
  CRITICAL  = 0;
  HIGH      = 10;
  MEDIUM    = 20;
  LOW       = 30;
  INFO      = 40;
}

enum SbomFormat {
  SPDX = 0;
  CYCLONEDX = 1;
}

enum LicenseIdentifier {
  UNKNOWN = 0;
}

message Sbom {
  SbomFormat type = 1;
  LicenseIdentifier licenseId = 2;
}

message VulnerabilityScore {
  string type = 1;
  string value = 2;
}

message VulnerabilityMeta {
  string id = 1;
  string source = 2;
  VulnerabilitySeverity severity = 3;
  VulnerabilityScore score = 4 [(validate.rules).message.required = true];
}

message VulnerabilityDetail {
  string id = 1;
  VulnerabilityMeta meta = 2;
}
